Closed Bug 237535 Opened 22 years ago Closed 21 years ago

prelight text invisible in high-contrast inverse themes

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bill.haneman, Assigned: ginnchen+exoracle)

References

Details

(Keywords: access, fixed-aviary1.0, fixed1.7.5)

Attachments

(1 file, 3 obsolete files)

"prelit" text is invisible (i.e. text on buttons and other UI elements which are "prelit" by the presence of the mouse of other user activity) when inverse themes are selected. To reproduce: on GNOME, select the HighContrastInverse theme from "Desktop Preferences->Theme". Start mozilla Note that if the mouse is moved over UI buttons ("Back', 'Reload', etc. and 'Home', 'Bookmarks', etc. in the personal toolbar), the text on these elements is invisible since it's displayed on white text on a white background.
Sounds like a GTK nsITheme issue.
Assignee: aaronleventhal → blizzard
Component: Accessibility APIs → GFX: Gtk
QA Contact: core.accessibility-apis → ian
Assignee: blizzard → bryner
Attached patch prelightstatepatch (obsolete) — Splinter Review
Patch for button, toolbutton, radio, checkbox prelight state color under Classic theme on GTK2
The patch solves some problems under GNOME HighContrast or HighContrastInverse theme. I added a color setting for GTK_STATE_PRELIGHT text, and modified css file to use it. For radio and checkbox, I changed nsNativeThemeGTK.cpp to get parent's state. And modified gtk2drawing.c, to draw radion and checkbox background correct. For gtk2drawing.c ConvertGtkState(GtkWidgetState* state), I backed out Pierre Chanial's patch. Because it won't work like gtk's application. When you hold down a button while moving the pointer out of the button, the button keep 'active'. Change to GNOME HighContrast theme, you'll notice that it really differs from gedit. For more information: http://bugzilla.mozilla.org/show_bug.cgi?id=118296#c8 http://bugzilla.mozilla.org/show_bug.cgi?id=118296#c10
review? Brain
Attachment #145592 - Flags: review?(ginn.chen)
Attachment #145592 - Flags: review?(ginn.chen) → review?(bryner)
bryner, pch, any comment on the patch?
Comment on attachment 145592 [details] [diff] [review] prelightstatepatch Please apply the CSS changes to the files in toolkit/skin as well. Also, I think this may regress gtk1 unless you provide something equivalent in its nsLookAndFeel, or have the CSS be #ifdef'd using the preprocessor. Looks good other than that but I'd like to see the revised patch.
Attachment #145592 - Flags: review?(bryner) → review-
Attachment #145592 - Attachment is obsolete: true
Attached patch Patch to Mozilla and Firefox (obsolete) — Splinter Review
For GTK1 lacks some state support to gtk_draw, I make my CSS change to GTK2 only. The patch covers both mozilla classic theme and firefox classic theme.
Attachment #148274 - Flags: review?(bryner)
In Firefox, these lines in browser.css block my patch in toolbarbutton.css. Text in menutoolbarbutton and bookmarktoolbarbutton will not change when hover. And Bug 187096 will block this bug slightly. When mouse in "Go Back" or "Go Forward" dropdown button container but not in button, the button text color won't turn hover.
Attachment #148284 - Flags: review?(bryner)
I combined 2 patches, and fixed a little mistake. Sorry for my junk.
Attachment #148274 - Attachment is obsolete: true
Attachment #148284 - Attachment is obsolete: true
Attachment #148490 - Flags: review?(bryner)
Comment on attachment 148490 [details] [diff] [review] Patch to Mozilla and Firefox post again toolbarbutton is still little problem. I'll try to fix it later.
Comment on attachment 148490 [details] [diff] [review] Patch to Mozilla and Firefox post again Sorry, it was gedit didn't display toolbarbutton correctly. This patch is good. Please review. Thanks.
Attachment #148274 - Flags: review?(bryner)
Attachment #148284 - Flags: review?(bryner)
Attachment #148490 - Flags: review?(bryner) → review+
Attachment #148490 - Flags: superreview?(blizzard)
*** Bug 239209 has been marked as a duplicate of this bug. ***
Assignee: bryner → ginn.chen
Attachment #148490 - Flags: superreview?(blizzard) → superreview?(roc)
Attachment #148490 - Flags: superreview?(roc) → superreview+
fixed. Checking in content/shared/public/nsCSSKeywordList.h; /cvsroot/mozilla/content/shared/public/nsCSSKeywordList.h,v <-- nsCSSKeywordList.h new revision: 3.59; previous revision: 3.58 done Checking in content/shared/src/nsCSSProps.cpp; /cvsroot/mozilla/content/shared/src/nsCSSProps.cpp,v <-- nsCSSProps.cpp new revision: 3.103; previous revision: 3.102 done Checking in gfx/src/gtk/gtk2drawing.c; /cvsroot/mozilla/gfx/src/gtk/gtk2drawing.c,v <-- gtk2drawing.c new revision: 1.8; previous revision: 1.7 done Checking in gfx/src/gtk/nsNativeThemeGTK.cpp; /cvsroot/mozilla/gfx/src/gtk/nsNativeThemeGTK.cpp,v <-- nsNativeThemeGTK.cpp new revision: 1.51; previous revision: 1.50 done Checking in widget/public/nsILookAndFeel.h; /cvsroot/mozilla/widget/public/nsILookAndFeel.h,v <-- nsILookAndFeel.h new revision: 1.39; previous revision: 1.38 done Checking in widget/src/gtk2/nsLookAndFeel.cpp; /cvsroot/mozilla/widget/src/gtk2/nsLookAndFeel.cpp,v <-- nsLookAndFeel.cpp new revision: 1.13; previous revision: 1.12 done Checking in themes/classic/global/unix/button.css; /cvsroot/mozilla/themes/classic/global/unix/button.css,v <-- button.css new revision: 1.12; previous revision: 1.11 done Checking in themes/classic/global/unix/toolbarbutton.css; /cvsroot/mozilla/themes/classic/global/unix/toolbarbutton.css,v <-- toolbarbutton.css new revision: 1.6; previous revision: 1.5 done Checking in themes/classic/global/unix/checkbox.css; /cvsroot/mozilla/themes/classic/global/unix/checkbox.css,v <-- checkbox.css new revision: 1.10; previous revision: 1.9 done Checking in themes/classic/global/unix/radio.css; /cvsroot/mozilla/themes/classic/global/unix/radio.css,v <-- radio.css new revision: 1.9; previous revision: 1.8 done Checking in themes/classic/global/unix/jar.mn; /cvsroot/mozilla/themes/classic/global/unix/jar.mn,v <-- jar.mn new revision: 1.10; previous revision: 1.9 done Checking in toolkit/skin/win/button.css; /cvsroot/mozilla/toolkit/skin/win/button.css,v <-- button.css new revision: 1.3; previous revision: 1.2 done Checking in toolkit/skin/win/checkbox.css; /cvsroot/mozilla/toolkit/skin/win/checkbox.css,v <-- checkbox.css new revision: 1.2; previous revision: 1.1 done Checking in toolkit/skin/win/radio.css; /cvsroot/mozilla/toolkit/skin/win/radio.css,v <-- radio.css new revision: 1.3; previous revision: 1.2 done Checking in toolkit/skin/win/toolbarbutton.css; /cvsroot/mozilla/toolkit/skin/win/toolbarbutton.css,v <-- toolbarbutton.css new revision: 1.15; previous revision: 1.14 done Checking in toolkit/skin/win/jar.mn; /cvsroot/mozilla/toolkit/skin/win/jar.mn,v <-- jar.mn new revision: 1.32; previous revision: 1.31 done Checking in browser/base/skin/browser.css; /cvsroot/mozilla/browser/base/skin/browser.css,v <-- browser.css new revision: 1.91; previous revision: 1.90 done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
landed on aviary branch as well ginn, please cc me on any bugs like this that have not been checked in on the aviary branch, as these would be good for Firefox 1.0
Blocks: 237534
should this go on the 1.7 branch?
This should go on the 1.7 branch if we want to sync Gecko changes with Aviary.
Keywords: fixed-aviary1.0
Attachment #148490 - Flags: approval1.7.x?
Comment on attachment 148490 [details] [diff] [review] Patch to Mozilla and Firefox post again a=mkaply for 1.7.x
Attachment #148490 - Flags: approval1.7.x? → approval1.7.x+
checked into 1.7 branch.
Keywords: fixed1.7.x
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: