Bug 237535 prelight text invisible in high-contrast inverse themes r=bryner, sr=roc, patch by ginn.chen@sun.com